llamastack/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llamastack
  namespace: hacohen-nemo
spec:
  path: /
  to:
    kind: Service
    name: llamastack
    weight: 100
  port:
    targetPort: 8321
  wildcardPolicy: None
